@@ -151,7 +151,7 @@
     <jersey.version>2.47</jersey.version>
     <hk2.version>2.6.1</hk2.version>
     <swagger.version>1.6.16</swagger.version>
-    <swagger-ui.version>5.28.1</swagger-ui.version>
+    <swagger-ui.version>5.29.3</swagger-ui.version>
     <hadoop.version>3.4.2</hadoop.version>
     <jsonpath.version>2.9.0</jsonpath.version>
     <jsonsmart.version>2.6.0</jsonsmart.version>
@@ -165,7 +165,7 @@
     <!-- helix-core, spark-core use libraries from io.dropwizard.metrics -->
     <dropwizard-metrics.version>4.2.37</dropwizard-metrics.version>
     <snappy-java.version>1.1.10.8</snappy-java.version>
-    <zstd-jni.version>1.5.7-4</zstd-jni.version>
+    <zstd-jni.version>1.5.7-5</zstd-jni.version>
     <lz4-java.version>1.8.0</lz4-java.version>
     <libthrift.verion>0.22.0</libthrift.verion>
     <log4j.version>2.25.2</log4j.version>
@@ -178,8 +178,8 @@
     <audienceannotations.version>0.15.1</audienceannotations.version>
     <clp-ffi.version>0.4.7</clp-ffi.version>
     <stax2-api.version>4.2.2</stax2-api.version>
-    <aws.sdk.version>2.34.4</aws.sdk.version>
-    <azure.sdk.version>1.2.38</azure.sdk.version>
+    <aws.sdk.version>2.35.1</aws.sdk.version>
+    <azure.sdk.version>1.3.0</azure.sdk.version>
     <azure.msal4j.version>1.23.1</azure.msal4j.version>
     <joda-time.version>2.14.0</joda-time.version>
     <janino.version>3.1.12</janino.version>
@@ -191,14 +191,14 @@
     <s3mock.version>2.17.0</s3mock.version>
     <localstack-utils.version>0.2.23</localstack-utils.version>
     <protobuf-dynamic.version>1.0.1</protobuf-dynamic.version>
-    <enforcer-api.version>3.6.1</enforcer-api.version>
+    <enforcer-api.version>3.6.2</enforcer-api.version>
 
     <spark2.version>2.4.8</spark2.version>
     <spark3.version>3.5.7</spark3.version>
     <kafka2.version>2.8.2</kafka2.version>
     <kafka3.version>3.9.1</kafka3.version>
     <confluent.version>7.7.0</confluent.version>
-    <pulsar.version>4.0.6</pulsar.version>
+    <pulsar.version>4.0.7</pulsar.version>
     <flink.version>1.20.3</flink.version>
 
     <!-- Apache Commons Libraries -->
@@ -234,13 +234,13 @@
     <!-- HTTP Components Libraries -->
     <httpclient.version>4.5.14</httpclient.version>
     <httpcore.version>4.4.16</httpcore.version>
-    <httpclient5.version>5.5</httpclient5.version>
+    <httpclient5.version>5.5.1</httpclient5.version>
     <httpcore5.version>5.3.6</httpcore5.version>
 
     <!-- Google Libraries -->
     <protobuf.version>3.25.8</protobuf.version>
     <grpc.version>1.75.0</grpc.version>
-    <google.cloud.libraries.version>26.68.0</google.cloud.libraries.version>
+    <google.cloud.libraries.version>26.69.0</google.cloud.libraries.version>
     <google.auto-service.version>1.1.1</google.auto-service.version>
     <google.re2j.version>1.8</google.re2j.version>
     <google.errorprone.version>2.42.0</google.errorprone.version>
@@ -265,10 +265,10 @@
     <javassist.version>3.30.2-GA</javassist.version>
     <bouncycastle.version>1.78.1</bouncycastle.version>
     <aircompressor.version>0.27</aircompressor.version>
-    <jna.version>5.18.0</jna.version>
+    <jna.version>5.18.1</jna.version>
     <jnr-ffi.version>2.2.17</jnr-ffi.version>
     <jnr-constants.version>0.10.4</jnr-constants.version>
-    <asm.version>9.8</asm.version>
+    <asm.version>9.9</asm.version>
     <paranamer.version>2.8.3</paranamer.version>
     <kotlin.stdlib.version>2.2.20</kotlin.stdlib.version>
     <jetbrains.annotations.version>26.0.2-1</jetbrains.annotations.version>
@@ -280,12 +280,12 @@
     <ivy.version>2.5.3</ivy.version>
     <c3p0.version>0.11.2</c3p0.version>
     <mchange-commons-java.version>0.3.2</mchange-commons-java.version>
-    <checker-qual.version>3.51.0</checker-qual.version>
+    <checker-qual.version>3.51.1</checker-qual.version>
     <groovy-all.version>2.4.21</groovy-all.version>
     <xml-apis.version>2.0.2</xml-apis.version>
     <roaring-bitmap.version>1.3.0</roaring-bitmap.version>
     <prometheus.jmx-exporter-javaagent.version>0.19.0</prometheus.jmx-exporter-javaagent.version>
-    <fastutil.version>8.5.16</fastutil.version>
+    <fastutil.version>8.5.18</fastutil.version>
     <disruptor.version>4.0.0</disruptor.version>
     <snakeyaml.version>2.5</snakeyaml.version>
     <hadoop-shaded-protobuf_3_25.version>1.4.0</hadoop-shaded-protobuf_3_25.version>
@@ -2288,6 +2288,9 @@
               --add-opens=java.base/java.util=ALL-UNNAMED
               --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
               --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+              -Dio.netty.tryReflectionSetAccessible=true
+              -Dio.grpc.netty.shaded.io.netty.tryReflectionSetAccessible=true
               -Dnet.bytebuddy.experimental=true
               -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito-core.version}/mockito-core-${mockito-core.version}.jar
               -Xshare:off
@@ -2522,7 +2525,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>3.5.1</version>
+          <version>3.6.1</version>
         </plugin>
         <plugin>
           <groupId>org.eclipse.sisu</groupId>
